sanitize_pointer added to supervisor code to prevent attacks based on I/O pointers

--- a/usermode/Objects/usermode.build_log.htm
+++ b/usermode/Objects/usermode.build_log.htm
@@ -21,20 +21,20 @@ Target DLL:      CMSIS_AGDI.dll V1.21.12.0
 Dialog DLL:      TARMCM1.DLL V1.9.0.0
  
 <h2>Project:</h2>
-C:\Users\sebastien\Documents\dev\dac-rep\trunk\supervisor\usermode\usermode.uvprojx
-Project File Date:  05/14/2016
+C:\Users\sebastien\Documents\dev\cm0-supervisor-demo\cm0-supervisor\usermode\usermode.uvprojx
+Project File Date:  06/18/2016
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.05 update 2 (build 169)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Rebuild Project 'usermode' - Target 'Target 1'
 compiling main.c...
-C:\Users\sebastien\Documents\dev\dac-rep\trunk\supervisor\usermode\main.c(68): warning:  #111-D: statement is unreachable
+C:\Users\sebastien\Documents\dev\cm0-supervisor-demo\cm0-supervisor\usermode\main.c(94): warning:  #111-D: statement is unreachable
         return 0;
 main.c: 1 warning, 0 errors
 assembling startup_ARMCM0plus.s...
 compiling system_ARMCM0plus.c...
 linking...
-Program Size: Code=2988 RO-data=236 RW-data=24 ZI-data=5472  
+Program Size: Code=3884 RO-data=368 RW-data=24 ZI-data=5472  
 ".\Objects\usermode.axf" - 0 Error(s), 1 Warning(s).
 
 <h2>Software Packages used:</h2>
@@ -47,7 +47,7 @@ Package Vendor: ARM
    * Component: Startup Version: 1.0.1
 
 <h2>Collection of Component include folders:</h2>
-  C:\Users\sebastien\Documents\dev\dac-rep\trunk\supervisor\usermode\RTE
+  C:\Users\sebastien\Documents\dev\cm0-supervisor-demo\cm0-supervisor\usermode\RTE
   C:\Keil_v5\ARM\PACK\ARM\CMSIS\4.3.0\CMSIS\Include
   C:\Keil_v5\ARM\PACK\ARM\CMSIS\4.3.0\Device\ARM\ARMCM0plus\Include
 
