--- a/supervisor/Objects/supervisor.build_log.htm
+++ b/supervisor/Objects/supervisor.build_log.htm
@@ -21,7 +21,7 @@ Target DLL:      UL2CM3.DLL V1.155.8.0
 Dialog DLL:      TARMCM1.DLL V1.9.0.0
  
 <h2>Project:</h2>
-C:\Users\sebastien\Documents\dev\dac-rep\trunk\supervisor\supervisor\supervisor.uvprojx
+C:\Users\sebastien\Documents\dev\cm0-supervisor-demo\cm0-supervisor\supervisor\supervisor.uvprojx
 Project File Date:  05/14/2016
 
 <h2>Output:</h2>
@@ -29,36 +29,36 @@ Project File Date:  05/14/2016
 Rebuild Project 'supervisor' - Target 'Target 1'
 assembling startup.s...
 compiling supervisor.c...
-C:\Users\sebastien\Documents\dev\dac-rep\trunk\supervisor\supervisor\supervisor.c(93): warning:  #111-D: statement is unreachable
+C:\Users\sebastien\Documents\dev\cm0-supervisor-demo\cm0-supervisor\supervisor\supervisor.c(102): warning:  #111-D: statement is unreachable
         return 0;
 supervisor.c: 1 warning, 0 errors
 compiling misc.c...
-C:\Users\sebastien\Documents\dev\dac-rep\trunk\supervisor\supervisor\misc.c(44): warning:  #177-D: function "rotrFixed" was declared but never referenced
+C:\Users\sebastien\Documents\dev\cm0-supervisor-demo\cm0-supervisor\supervisor\misc.c(44): warning:  #177-D: function "rotrFixed" was declared but never referenced
       STATIC INLINE word32 rotrFixed(word32 x, word32 y)
-C:\Users\sebastien\Documents\dev\dac-rep\trunk\supervisor\supervisor\misc.c(71): warning:  #177-D: function "ByteReverseWords" was declared but never referenced
+C:\Users\sebastien\Documents\dev\cm0-supervisor-demo\cm0-supervisor\supervisor\misc.c(71): warning:  #177-D: function "ByteReverseWords" was declared but never referenced
   STATIC INLINE void ByteReverseWords(word32* out, const word32* in,
-C:\Users\sebastien\Documents\dev\dac-rep\trunk\supervisor\supervisor\misc.c(133): warning:  #177-D: function "xorbuf" was declared but never referenced
+C:\Users\sebastien\Documents\dev\cm0-supervisor-demo\cm0-supervisor\supervisor\misc.c(133): warning:  #177-D: function "xorbuf" was declared but never referenced
   STATIC INLINE void xorbuf(void* buf, const void* mask, word32 count)
 misc.c: 3 warnings, 0 errors
 compiling wolf_aes.c...
-C:\Users\sebastien\Documents\dev\dac-rep\trunk\supervisor\supervisor\wolf_aes.c(955): warning:  #223-D: function "printf" declared implicitly
+C:\Users\sebastien\Documents\dev\cm0-supervisor-demo\cm0-supervisor\supervisor\wolf_aes.c(955): warning:  #223-D: function "printf" declared implicitly
           
 YASSL_MSG("AesEncrypt encountered improper key, set it up");
-C:\Users\sebastien\Documents\dev\dac-rep\trunk\supervisor\supervisor\wolf_aes.c(947): warning:  #177-D: variable "t0" was declared but never referenced
+C:\Users\sebastien\Documents\dev\cm0-supervisor-demo\cm0-supervisor\supervisor\wolf_aes.c(947): warning:  #177-D: variable "t0" was declared but never referenced
     word32 *t0=pt0;
-C:\Users\sebastien\Documents\dev\dac-rep\trunk\supervisor\supervisor\wolf_aes.c(948): warning:  #177-D: variable "t1" was declared but never referenced
+C:\Users\sebastien\Documents\dev\cm0-supervisor-demo\cm0-supervisor\supervisor\wolf_aes.c(948): warning:  #177-D: variable "t1" was declared but never referenced
         word32 *t1=pt0+1;
-C:\Users\sebastien\Documents\dev\dac-rep\trunk\supervisor\supervisor\wolf_aes.c(949): warning:  #177-D: variable "t2" was declared but never referenced
+C:\Users\sebastien\Documents\dev\cm0-supervisor-demo\cm0-supervisor\supervisor\wolf_aes.c(949): warning:  #177-D: variable "t2" was declared but never referenced
         word32 *t2=pt0+2;
-C:\Users\sebastien\Documents\dev\dac-rep\trunk\supervisor\supervisor\wolf_aes.c(950): warning:  #177-D: variable "t3" was declared but never referenced
+C:\Users\sebastien\Documents\dev\cm0-supervisor-demo\cm0-supervisor\supervisor\wolf_aes.c(950): warning:  #177-D: variable "t3" was declared but never referenced
         word32 *t3=pt0+3;
-C:\Users\sebastien\Documents\dev\dac-rep\trunk\supervisor\supervisor\wolf_aes.c(1132): warning:  #223-D: function "printf" declared implicitly
+C:\Users\sebastien\Documents\dev\cm0-supervisor-demo\cm0-supervisor\supervisor\wolf_aes.c(1132): warning:  #223-D: function "printf" declared implicitly
           
 YASSL_MSG("AesDecrypt encountered improper key, set it up");
 wolf_aes.c: 6 warnings, 0 errors
 assembling aes_core.s...
 linking...
-Program Size: Code=7306 RO-data=10566 RW-data=20 ZI-data=348  
+Program Size: Code=7350 RO-data=10566 RW-data=20 ZI-data=348  
 ".\Objects\supervisor.axf" - 0 Error(s), 10 Warning(s).
 
 <h2>Software Packages used:</h2>
@@ -70,7 +70,7 @@ Package Vendor: ARM
    * Component: CORE Version: 4.1.0
 
 <h2>Collection of Component include folders:</h2>
-  C:\Users\sebastien\Documents\dev\dac-rep\trunk\supervisor\supervisor\RTE
+  C:\Users\sebastien\Documents\dev\cm0-supervisor-demo\cm0-supervisor\supervisor\RTE
   C:\Keil_v5\ARM\PACK\ARM\CMSIS\4.3.0\CMSIS\Include
   C:\Keil_v5\ARM\PACK\ARM\CMSIS\4.3.0\Device\ARM\ARMCM0plus\Include
 
